<resources>
    <string name="app_name">Ball Flight</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">Play</string>
    <string name="setting">Setting</string>
    <string name="sound">Sound</string>
    <string name="music">Music</string>
    <string name="language">English</string>
    <string name="ok">OK</string>
    <string name="shop">SHOP</string>
    <string name="score_format">Your score: %d\nYour best score: %d</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="select">Select</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="enter_play_name">Enter Player Name</string>
    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="gameover">Game Over</string>
    <string name="game_begin">Click to start the game</string>
</resources>