<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

   >
<data class="FragmentHomeBinding">

</data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background"

        >

        <ImageView
            android:id="@+id/iv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_title_splash"
            android:layout_marginTop="32dp"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"

            android:src="@drawable/ic_play_background" />

        <TextView
            android:id="@+id/tv_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/iv_background"
            android:fontFamily="@font/montseratt"
            android:layout_alignTop="@+id/iv_background"
            android:layout_alignEnd="@+id/iv_background"
            android:layout_alignBottom="@+id/iv_background"
            android:textAlignment="center"
            android:text="@string/play"
            android:layout_marginTop="5dp"
            android:textColor="#5DE3FF"
            android:textSize="35sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_setting_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_background"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"

            android:src="@drawable/ic_setting_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/iv_setting_background"
            android:fontFamily="@font/montseratt"
            android:layout_alignTop="@+id/iv_setting_background"
            android:layout_alignEnd="@+id/iv_setting_background"
            android:layout_alignBottom="@+id/iv_setting_background"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:text="@string/setting"

            android:textColor="#5DE3FF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_store_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_store_bg"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/tv_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/iv_store_bg"
            android:fontFamily="@font/montseratt"
            android:layout_alignTop="@+id/iv_store_bg"
            android:layout_alignEnd="@+id/iv_store_bg"
            android:layout_alignBottom="@+id/iv_store_bg"
            android:textAlignment="center"
            android:layout_marginTop="12dp"
            android:text="@string/shop"

            android:textColor="#5DE3FF"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>


</layout>